--- a/style.css
+++ b/style.css
@@ -2,9 +2,9 @@
     margin: 0%;
     padding:0%
 }
-body{
-background-color: black;
 
+.bg-black{
+    background-color: black;
 }
 
 .white-font {
@@ -15,7 +15,7 @@ background-color: black;
     display: flex;
     justify-content: space-between;
 
-    border: 1px solid white;
+ 
     height: 10vh;
 }
 
@@ -25,7 +25,7 @@ background-color: black;
     width: 80%;
     justify-content: space-evenly;
     font-size: 1.2em;
-    border: 1px solid white;
+  
     height: 100%;
     align-items: center;
 }
@@ -48,7 +48,6 @@ background-color: black;
 .main-text-container{
     display: flex;
     flex-direction: column;
-    border: 1px solid white;
     align-items: center;
     justify-content: center;
     height: 50vh;
@@ -74,20 +73,29 @@ background-color: black;
 
 .cards-container > div {
     width: 80%;
+    margin: 10px;
 }
 
 .card-one-container{
     display: flex;
-    justify-content: space-evenly;
-    
+    justify-content: space-between;
+    flex-direction: row;
 }
 
 .card-one-container > div{
-    width: 30%;
+    width: 31%;
+   
 }
 .card-one-container > div > img{
     margin-bottom: 7px;
     width: 100%;
+    transition: 0.5s;
+    border-radius: 5px;  
+}
+
+.card-one-container > div > img:hover{
+    transform: translateY(-5vh);
+  
 }
 
 .card-one-container > div>h3{
